--- a/src/assets/scss/helpers/_variables.scss
+++ b/src/assets/scss/helpers/_variables.scss
@@ -19,3 +19,4 @@ $white: #FFFFFF !default;
 $sand: #ECE5DD !default;
 $black: #000000 !default;
 $gray-light: #ACACAC !default;
+$blue: #34B7F1 !default;
